--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.35",
     "@types/es6-promise": "0.0.32",
+    "@types/mocha": "^2.2.39",
     "@types/mongodb": "^2.1.40",
     "@types/node": "^7.0.5",
+    "chai": "^3.5.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-mocha": "^3.0.1",
     "gulp-typescript": "^3.1.5",
+    "mocha-typescript": "^1.0.22",
     "require-dir": "^0.3.1",
     "run-sequence": "^1.2.2",
     "typescript": "^2.1.6",
