--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": false,
-        "sourceMap": false
+        "sourceMap": true,
+        "outDir": "dist"
     },
     "exclude": [
         "node_modules"
